--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.42",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "generator-office": "^1.9.7",
+    "node-cache": "^5.1.2",
+    "nodemon": "^3.0.3",
     "puppeteer": "^21.6.1",
     "read-excel-file": "^5.7.1",
     "xlsx": "^0.18.5",
@@ -12,7 +16,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --env-file=.env server.js",
+    "dev": "nodemon --env-file=.env server.js"
   },
   "author": "",
   "license": "ISC",
