--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "puppeteer": "^21.6.1",
+    "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
   "name": "loadshedding-api",
