--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "puppeteer": "^21.6.1",
+    "redis": "^4.6.13",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
