--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
-    "puppeteer": "^21.6.1",
+    "puppeteer": "^22.1.0",
     "redis": "^4.6.13",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
@@ -16,7 +16,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --env-file=.env server.js",
+    "start": "node server.js",
     "dev": "nodemon --env-file=.env server.js"
   },
   "author": "Sibusiso Nkosi",
