--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.10.1",
     "axios": "^1.6.7",
+    "chai": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mocha": "^10.3.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
+    "prisma": "^5.10.1",
     "puppeteer": "^22.1.0",
     "redis": "^4.6.13",
+    "redis-om": "^0.4.3",
+    "sqlite": "^5.1.1",
+    "supertest": "^6.3.4",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
@@ -15,11 +22,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon --env-file=.env server.js"
+    "test": "jest --detectOpenHandles",
+    "start": "node --env-file=.env server.js",
+    "dev": "nodemon --env-file=.env.local server.js"
   },
   "author": "Sibusiso Nkosi",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
