--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mocha": "^10.3.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
