--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redis-om": "^0.4.3",
     "sqlite": "^5.1.1",
     "supertest": "^6.3.4",
+    "treblle": "^1.3.0",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
